tests/valhalla/neg/TraitExtendsAnyRef.scala
import scala.annotation.valhalla

@valhalla
trait ExtendsAnyRef // error